# holy-lambda

./: .editorconfig  .gitignore  .joker  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  ROADMAP.org  VERSION  azure-pipelines.yml  config.yml  deployer.clj  deps.edn  package.json  pom.xml  project.clj  todo.org
.circleci/: config.yml
.clj-kondo/: config.edn
.github/: FUNDING.yml
benchmarks/: .gitignore
benchmarks/holy-lambda-vs-other-runtimes/rust/: .gitignore  Cargo.toml  Makefile  bootstrap
doc/: 0-00-toc.md  1-00-tutorial.md  1-01-installation.md  1-01-rationale.md  1-01-whatisit.md  1-01-whatits.md  1-02-first-project.md  1-02-getting-started.md  1-02-new-project.md  1-03-tasks.md  1-05-troubleshooting.md  1-06-graalvmee.md  1-07-FAQ.md  2-00-toc.md  2-01-interceptors.md  cljdoc.edn  installation.md  whatisit.md
docker/: Dockerfile  Dockerfile-ce-dev.template  Dockerfile.amd64.ce.template  Dockerfile.amd64.dev.template  Dockerfile.ce  Dockerfile.ce.m1  Dockerfile.ce.template  Dockerfile.dev  Dockerfile.ee  download_pods  download_pods.clj  registry.clj
docs/: 0-00-toc.md  1-07-FAQ.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  acknowledgements.md  api.md  babashka-backend-tutorial.md  cli.md  clojure-backend-class-data-sharing.md  clojure-backend-tutorial.md  core-libs.md  deep-dive-backends.md  deployment-tools.md  faq.md  getting-started.md  index.html  migration-guide.md  model.md  native-backend-tutorial.md  native-backend.md  overview-diagram.md  prerequisites.md  project-scaffolding.md  resources.md  stable-releases.md  (+1 more)
(+446 files in other folders)
