[package]
name = "hello_world"
version = "0.1.0"
authors = ["Karol Wójcik <karol.wojcik@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.80"
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
tokio = "1.6.1"

